--- a/Telecom and Revenue Customer Segmentation.ipynb
+++ b/Telecom and Revenue Customer Segmentation.ipynb
@@ -1135,7 +1135,7 @@
    "source": [
     "# Removing Duplicate values\n",
     "\n",
-    "df.drop_duplicates(inplace=True)"
+    "df = df.drop_duplicates(inplace=True)"
    ]
   },
   {
